--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,11 +22,26 @@ services:
       # Get the configuration from the dotenv file.
       - ./application/.env
     ports:
-      - "80:3000"
-      - "443:443"
+      - "3000"
     links:
       - database
     networks:
       - server_network
     depends_on:
       - database
+    restart: always
+
+  webserver:
+      build: ./server
+      restart: always
+      volumes:
+        - "/etc/letsencrypt"
+      links:
+          - application
+      ports:
+          - "8080:80"
+          - "443:443"
+      networks:
+        - server_network
+      depends_on:
+        - application
