--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.dev.js --mode development",
+    "watch": "webpack --watch --config ./webpack.dev.js --mode development",
     "build": "webpack --config ./webpack.prod.js",
     "server": "http-server ./dist",
     "test": "jest .",
@@ -14,68 +15,73 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^7.1.2",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "chromedriver": "^2.38.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "chromedriver": "^2.42.0",
     "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "env2": "^2.2.0",
-    "eslint": "^5.0.1",
-    "eslint-plugin-react": "^7.7.0",
-    "file-loader": "^1.1.11",
+    "css-loader": "^1.0.0",
+    "env2": "^2.2.2",
+    "eslint": "^5.7.0",
+    "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
-    "jest": "^23.2.0",
-    "mocha": "^5.1.1",
-    "node-sass": "^4.8.3",
-    "react-hot-loader": "^3.1.3",
+    "jest": "^23.6.0",
+    "mocha": "^5.2.0",
+    "node-sass": "^4.9.3",
+    "react-hot-loader": "^4.3.11",
+    "react-icons": "^3.2.0",
     "react-svg-loader": "^2.1.0",
-    "react-test-renderer": "^16.4.1",
-    "sass-loader": "^7.0.1",
-    "selenium-server": "^3.11.0",
-    "style-loader": "^0.21.0",
+    "react-test-renderer": "^16.5.2",
+    "sass-loader": "^7.1.0",
+    "selenium-server": "^3.14.0",
+    "style-loader": "^0.23.1",
     "svg-inline-loader": "^0.8.0",
     "svg-loader": "0.0.2",
     "svg-react-loader": "^0.4.5",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2"
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "async": "^2.6.0",
-    "babel-preset-env": "^1.6.1",
-    "bluebird": "^3.5.1",
+    "@material-ui/core": "^3.2.1",
+    "@material-ui/icons": "^3.0.1",
+    "async": "^2.6.1",
+    "bluebird": "^3.5.2",
     "classnames": "^2.2.6",
-    "dropbox": "^4.0.4",
-    "dropbox-v2-api": "^2.1.15",
-    "es6-promise": "^4.2.4",
-    "glob": "^7.1.2",
-    "googleapis": "^29.0.0",
+    "dropbox": "^4.0.12",
+    "dropbox-v2-api": "^2.1.20",
+    "es6-promise": "^4.2.5",
+    "glob": "^7.1.3",
+    "googleapis": "^34.0.0",
     "http-server": "^0.11.1",
-    "imagemin": "^5.3.1",
+    "imagemin": "^6.0.0",
     "imagemin-jpegtran": "^5.0.2",
-    "imagemin-pngquant": "^5.1.0",
+    "imagemin-pngquant": "^6.0.0",
     "isomorphic-fetch": "^2.2.1",
-    "moment": "^2.22.1",
-    "moment-timezone": "^0.5.16",
-    "muicss": "^0.9.39",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
+    "muicss": "^0.9.41",
     "nightwatch": "^1.0.3",
     "node-dropbox": "^0.1.8",
-    "node-fetch": "^2.1.2",
+    "node-fetch": "^2.2.0",
     "pretty-log": "^0.1.0",
     "random-number-csprng": "^1.0.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.5.2",
+    "react-animated-weather": "^1.0.3",
+    "react-dom": "^16.5.2",
     "react-fancy-field": "^1.0.8",
-    "react-icons": "^2.2.7",
+    "react-icons-weather": "^1.0.5",
+    "react-open-weather-icons": "^0.1.1",
     "react-open-weather-map": "^2.3.0",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "sharp": "^0.20.2",
-    "shelljs": "^0.8.1"
+    "redux": "^4.0.1",
+    "sharp": "^0.21.0",
+    "shelljs": "^0.8.2"
   }
 }
