--- a/app/server/package.json
+++ b/app/server/package.json
@@ -12,9 +12,11 @@
   "license": "Apache 2.0",
   "dependencies": {
     "@okta/jwt-verifier": "0.0.14",
+    "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.18.3",
     "btoa": "^1.2.1",
     "dotenv": "^6.0.0",
+    "env2": "^2.2.2",
     "epilogue": "^0.7.1",
     "express": "^4.16.3",
     "nodemon": "^1.18.10",
