--- a/app/client/package.json
+++ b/app/client/package.json
@@ -16,8 +16,11 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "chromedriver": "^2.42.0",
     "clean-webpack-plugin": "^0.1.19",
@@ -51,6 +54,7 @@
     "@material-ui/core": "^3.2.1",
     "@material-ui/icons": "^3.0.1",
     "async": "^2.6.1",
+    "axios": "^0.18.0",
     "bluebird": "^3.5.2",
     "classnames": "^2.2.6",
     "dropbox": "^4.0.12",
