--- a/app/server/package.json
+++ b/app/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon --inspect index.js",
     "start": "NODE_ENV=production node .",
-    "test": "standard"
+    "test": "jest ."
   },
   "author": "",
   "license": "Apache 2.0",
@@ -19,13 +19,18 @@
     "env2": "^2.2.2",
     "epilogue": "^0.7.1",
     "express": "^4.16.3",
+    "fs-extra": "^7.0.1",
     "nodemon": "^1.18.10",
     "request-promise": "^4.2.2",
     "sequelize": "^4.38.0",
+    "sha256": "^0.2.0",
     "sqlite3": "^4.0.2",
     "util": "^0.11.0"
   },
   "devDependencies": {
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-jest": "^22.4.1",
+    "jest": "^24.7.1",
     "standard": "^11.0.1"
   }
 }
